tests/should_fail/bug/1544_2.stderr
error[E0277]: the trait bound `Base: creusot_contracts::DeepModel` is not satisfied
  --> 1544_2.rs:12:10
   |
12 | #[derive(PartialEq)]
   |          ^^^^^^^^^ the trait `creusot_contracts::DeepModel` is not implemented for `Base`
   |
   = help: the following other types implement trait `creusot_contracts::DeepModel`:
             &T
             &mut T
             ()
             (A, Z, Y, X, W, V, U, T)
             (B, A, Z, Y, X, W, V, U, T)
             (C, B, A, Z, Y, X, W, V, U, T)
             (D, C, B, A, Z, Y, X, W, V, U, T)
             (E, D, C, B, A, Z, Y, X, W, V, U, T)
           and 40 others
   = note: required for `&Base` to implement `creusot_contracts::DeepModel`
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
